# Calculator_v2.0

./: README.md
assets/icons/: icon.icns  icons.qrc
calculator/: calculator.pro  depcalc.ui  graph.ui  loancalc.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  Calculator.h  Makefile  SmartCalc_v2.0.cc  SmartCalc_v2.0.h  Token.cc  Token.h  calculator_tests.cc
src/back/: Calculator.cc  Calculator.h  Controller.h  Token.cc  Token.h
src/calculator/: CMakeLists.txt  calculator.pro  depcalc.cpp  depcalc.h  depcalc.ui  graph.cpp  graph.h  graph.ui  loancalc.cpp  loancalc.h  loancalc.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/front/: SmartCalc_v2.pro  depcalc.cpp  depcalc.h  depcalc.ui  graph.cpp  graph.h  loancalc.cpp  loancalc.h  main.cpp  mainwindow.cpp  mainwindow.h
